Comment must be displayed at the bottom of input comment form on Document show page ,fix #1122
Former-commit-id: d4748670e167a28733b863ec2752c6346911b283 [formerly 09822675d684b3a52879a5ff2a99b68fcf23dd40] [formerly f5ce22618fd0e5a051b00899a4da491d7c5e561c [formerly f5935a263ffef882fc2d35b281489c646598ba7b]]
Former-commit-id: 7094b129ea6a73031345a92b8b2c483be077d5c9 [formerly 83cda002609c615d88ea4bb674dc9be0523256a7]
Former-commit-id: a6d58a5d0d7b7f3290b5e9b6e0a7a47a6f5b3566

--- a/templates/documents/show.html
+++ b/templates/documents/show.html
@@ -84,6 +84,34 @@
                 <div class="col-md-12 showPage margin-bottom-15 ">
                     <iframe class="cusIframe" src="https://docs.google.com/file/d/<%=attachment.resource_id%>/preview"  width="100%" class="col-md-12" height="300"></iframe>
                 </div>
+                <!-- here boy -->
+                   <div class="showPage col-md-12 margin-bottom-15">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="portlet">
+                                <div class="portlet-body">
+                                    <p class⁼"lead"=""><strong>{{ _('Add New Comment :')}}</strong> </p>
+                                    <form id="addComment" class=" ng-pristine ng-valid">
+                                        <div class="form-group">
+                                            <textarea id="noteBody" class="form-control ng-pristine ng-valid" rows="3" ng-model="comment.content"></textarea>
+
+                                        </div>
+
+                                        <div class="pull-right">
+
+                                            <input ng-hide="isLoading" ng-click="addComment(comment)"  type="submit" class="btn green" value="Add comment">
+                                            <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+                                        </div>
+                                        <div class="clearfix"></div>
+                                    </form>
+                                </div>
+
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <!-- end here -->
                 <div class=" col-md-12">
                     <div class="row">
                         <div class="col-md-12 commentsShow">
@@ -113,32 +141,7 @@
 
                     </div>
                 </div>
-                <div class="showPage col-md-12 margin-bottom-15">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="portlet">
-                                <div class="portlet-body">
-                                    <p class⁼"lead"=""><strong>{{ _('Add New Comment :')}}</strong> </p>
-                                    <form id="addComment" class=" ng-pristine ng-valid">
-                                        <div class="form-group">
-                                            <textarea id="noteBody" class="form-control ng-pristine ng-valid" rows="3" ng-model="comment.content"></textarea>
-
-                                        </div>
-
-                                        <div class="pull-right">
-
-                                            <input ng-hide="isLoading" ng-click="addComment(comment)"  type="submit" class="btn green" value="Add comment">
-                                            <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
-                                        </div>
-                                        <div class="clearfix"></div>
-                                    </form>
-                                </div>
-
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
+             
                 <!-- END PAGE HEADER-->
                 <!-- BEGIN PAGE CONTENT-->
             </div>
