--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -22,9 +22,10 @@
       <div class="col-md-10 col-xs-12 filter-content">
       <div class="filterOptions">
 
-          <span role="button" class="filterItem" ng-click="runTheProcess();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">{{ _('Recent Posts')}}  </span>
-          <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='my'}" ng-click="popular_tweets();selectedOption ='my'">{{ _('Popular Posts')}} </span>
-          <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='map'}" ng-click="showMaps();selectedOption ='map'">{{ _('On Maps')}} </span>
+          <span role="button" class="filterItem" ng-click="runTheProcess();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">{{ _('Recent')}} 
+          <span class="hidden-xs hiddenOnxs">{{ _('Posts')}}</span> </span>
+          <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='my'}" ng-click="popular_tweets();selectedOption ='my'">{{ _('Popular')}} <span class="hidden-xs hiddenOnxs">{{ _('Posts')}}</span></span>
+          <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='map'}" ng-click="showMaps();selectedOption ='map'">{{ _('On')}}<span class="hidden-xs hiddenOnxs">{{ _('Maps')}}</span> </span>
 
           
             <div class="btn-group visibleOnPhone">
