--- a/templates/base.html
+++ b/templates/base.html
@@ -439,9 +439,9 @@
       <!-- test -->
   <script type="text/javascript">
 
-   // var ROOT = '/_ah/api';
+   var ROOT = '/_ah/api';
    
-   var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+   // var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
    
 
