display tweets ordered by last item
Former-commit-id: ec0539f013cd3c26f779187f9f53532e54792b73 [formerly f422e061bd6688801d7897576a080aeac1fcc859] [formerly 5ba963b3e047a87dbd5364ad1093e85af678d10c [formerly 978ba4876bc3db9d046eb37199c05bd8690166da]]
Former-commit-id: b7f2aecd2deb979f20a7e4f002b83f7e61d9e359 [formerly 7407710f4e9bcae2de22d7accc221f559ccdbfb7]
Former-commit-id: ef1c82c03c3a3ffef725572c0ed4f61e7805d43d

--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -195,7 +195,12 @@
                 </span>
                 </a> 
               </div>
-          <!-- <a class="pull-right" href="https://twitter.com/TwitterAds/status/398826034499698688" data-datetime="2013-11-08T14:55:11+0000" data-scribe="element:full_timestamp"><time pubdate="" class="dt-updated" datetime="2013-11-08T14:55:11+0000" title="Time posted: 08 Nov 2013, 14:55:11 (UTC)"><%=fromNow(tweet.created_at)%></time></a> -->
+              <div class="pitch">
+                <span  class="contact-title" >
+                  <%=fromNow(tweet.created_at)%>
+                </span>
+              </div>
+         
               <div class="clearfix"></div>
           </div>
           </div>
