fixing Scroll on sharing setting Modal on All objects fix #1136
Former-commit-id: 3f133625b21e325b4d0e32120f5c1f8701291a4b [formerly d8924553af9b0ea09a208790e3806af42ffe306e] [formerly e59005531a5f48ea3f76f26f60c577c470c5eaa4 [formerly e0f9c5021b9cd6cabe11b15891bd0b52ef9218d9]]
Former-commit-id: 2b42c2043283246c29bd8f1602279a779f0dbf32 [formerly daa7f4f7355b43caef3c103a58b7051ad3f10771]
Former-commit-id: 1c62acd7e47e535b143ee54d7cf666ee2e52fb84

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -2526,28 +2526,30 @@
                             {{ _("private: only you and your collaborators")}}
                         </label>
                     </div>
-                    <hr/>
-                    <div class=''>
+                   
+                    <div class='' id="collaborators" ng-show="account.access=='private'">
+                         <hr/>
                         <p>{{ _("Collaborators:")}}</p>
                         <div ng-repeat="collaborator in collaborators_list" class="invitation">
                             <img class="google-avatar" ng-src="<%=collaborator.img%>"/>
                             <%=collaborator.display_name%> < <%=collaborator.email%> >
                         </div>
-
+                        
                     </div>
-                    <hr/>
+                   
 
-                    <div class=''>
-                        <p>{{ _("Invited user:")}}</p>
-                        <div class="invitation" ng-repeat="invited in sharing_with">
-                            <img class="google-avatar" src="<%= invited.google_public_profile_photo_url%>"/>
-                            <strong> <%= invited.google_display_name %> < <%=invited.email%> ></strong>
-                            <hr/>
-                        </div>
-
+                    <div class='' ng-show="account.access=='private'">
+                         <hr/>           
                         <p>{{ _("Invite collaborators:")}}</p>
+                        <div class="col-md-12">
                         <div class="form-group">
                             <input type="text" ng-model="user" typeahead="user as user.google_display_name + ' <' + user.email + '>' for user in users | filter:$viewValue | limitTo:8" typeahead-on-select="selectMember()" class="form-control" placeholder="{{ _('Enter name or email addresse to add people to this group')}}">
+                            <div class="invitation" ng-repeat="invited in sharing_with">
+                                <img class="google-avatar" src="<%= invited.google_public_profile_photo_url%>"/>
+                                <strong> <%= invited.google_display_name %> < <%=invited.email%> ></strong>
+                                <hr/>
+                            </div>
+                        </div>
                         </div>
 
                     </div>
@@ -2994,6 +2996,9 @@
                                 /* $('body').popover({ selector: '[data-popover]', trigger: 'click hover', placement: 'left', delay: {show: 50, hide: 400}});*/
                                 $('#assigeeList').slimScroll({
                                     height: '200px'
+                                });
+                                $('#collaborators').slimScroll({
+                                    height: '192px'
                                 });
                                 $('.waterfall').waterfall({
                                     colMinWidth: 210,
