--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -1591,7 +1591,7 @@
                         </label>
                     </div>
                     <hr/>
-                    <div class=''>
+                    <div class='' id="collaborators">
                         <p>{{ _("Collaborators:")}}</p>
                         <div ng-repeat="collaborator in collaborators_list" class="invitation">
                             <img class="google-avatar" ng-src="<%=collaborator.img%>"/>
@@ -2000,6 +2000,9 @@
                             $('#assigeeList').slimScroll({
                     height: '200px'
                     });
+                             $('#collaborators').slimScroll({
+                                    height: '192px'
+                                });
                             $('.waterfall').waterfall({
                     colMinWidth: 210,
                             defaultContainerWidth: 840,
