--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -2257,7 +2257,7 @@
                             </label>
                     </div>
                     <hr/>
-                    <div class=''>
+                    <div class='' id="collaborators">
                     <p>{{ _("Collaborators:") }}</p>
                         <div ng-repeat="collaborator in collaborators_list" class="invitation">
                           <img class="google-avatar" ng-src="<%=collaborator.img%>"/>
@@ -2802,6 +2802,9 @@
           $('#assigeeList').slimScroll({
               height: '200px'
           });
+           $('#collaborators').slimScroll({
+                                    height: '192px'
+                                });
   $('.waterfall').waterfall({
               colMinWidth: 210,
               defaultContainerWidth: 840,
