--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -874,7 +874,7 @@
 
                     </div>
                     <hr/>
-                    <div class=''>
+                    <div class='' id="collaborators">
                     <p>{{ _('Collaborators:')}}</p>
                         <div ng-repeat="collaborator in collaborators_list" class="invitation">
                           <img class="google-avatar" src="<%=collaborator.img%>"/>
@@ -1348,6 +1348,9 @@
       pickTime: false
     });
   });
+   $('#collaborators').slimScroll({
+           height: '192px'
+   });
     $('.waterfall').waterfall({
         colMinWidth: 210,
         defaultContainerWidth: 800,
