send emails with attachments api #1059
Former-commit-id: b41c084b20c3b172f9b44c6ac2d06947861e897e [formerly 816c8c1ef2b39da5402b349f9caf2045c5d53c17] [formerly a5980b8e2e9679cda0f46f85eaa60a5ec1252708 [formerly 1f004343da80773704ebbc66ec38cd5bd826f040]]
Former-commit-id: 5ca921e74968d9db17c037b8990fdda9c422926d [formerly 37d4fd755ff43807c995fc4a6f11c497b4db49c5]
Former-commit-id: 1d6b05dbae4331c386fb2a0066057ce033b86fd9

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,6 @@
   <!-- BEGIN GLOBAL MANDATORY STYLES -->
   <link href="/static/bootstrap3/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
  <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
-   <link href="/static/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
   <link href="/static/bootstrap3/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
   <link href="/static/bootstrap3/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css"/>
 <link href="//fonts.googleapis.com/css?family=Ubuntu:300,300italic,400,400italic,500,500italic,700,700italic&subset=latin" rel="stylesheet" type="text/css" />
@@ -441,9 +440,9 @@
 
   <script type="text/javascript">
 
-   // var ROOT = '/_ah/api';
+   var ROOT = '/_ah/api';
    
-   var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+   // var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
    
