before pull from iogrow
Former-commit-id: 6aff67b3f60dcc72bbafa6d2a9d20448e47ff5e2 [formerly 201910b8939a11be611b9019af179b5e174197d6] [formerly 60fbd07432ed24063d42a2f442c6329877c49efa [formerly 66d6d520f0c7932f2eb008a025ecd83c95d1b22b]]
Former-commit-id: 03990949301ae72d158b931c7f56e1dafc72f762 [formerly c0b67c172e687e0c69ba053bd775e3fc2a3e968e]
Former-commit-id: a358e1aca554d95ca9fd4402639498c183a28a44

--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -177,6 +177,7 @@
                        </li>
                     </ul>
                  </li>
+                 <li class="ng-tab sm-menu" ng-class="{active: selectedTab == 3}"><a ng-click="selectedTab = 3;createdByMe('{{ME}}');">{{ _("Created by Me") }}</a></li>
                   <li class="ng-tab sm-menu hidden-lg hidden-md"><a ng-click="showTagFilterCard();">{{ _("Filter by Tags") }}</a></li>                   
                   <li class="dropdown sm-menu-inv">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
