--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
   <link href="/static/bootstrap3/plugins/bootstrap-daterangepicker/daterangepicker-bs3.css" rel="stylesheet" type="text/css"/>
   <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/static/css/bootstrap-wysihtml5.css">
-  
+
 
 
     <link href="/static/bootstrap3/plugins/select2/select2_metro.css" rel="stylesheet" type="text/css"/>
@@ -47,14 +47,14 @@
    <link href="/static/plugins/date-time-picker/jquery.simple-dtpicker.css" rel="stylesheet" type="text/css"/>
    <link href="/static/plugins/jquery-easy-pie-chart/jquery.easy-pie-chart.css" rel="stylesheet" type="text/css"/>
   <link href="/static/bootstrap3/css/custom.css" rel="stylesheet" type="text/css"/>
-  
+
   <link href="/static/angular-xeditable-0.1.8/css/xeditable.css" rel="stylesheet">
   <link href="/static/plugins/fullcalendar/fullcalendar.css" rel="stylesheet" type="text/css"/>
   <link href='/static/plugins/fullcalendar/fullcalendar.print.css' rel='stylesheet' media='print' />
 
   <!-- test -->
   <link rel="stylesheet" type="text/css" href="http://cdn-na.infragistics.com/igniteui/2014.1/latest/css/themes/infragistics/infragistics.theme.css">
-  <link rel="stylesheet" type="text/css" href="http://cdn-na.infragistics.com/igniteui/2014.1/latest/css/structure/infragistics.css">  
+  <link rel="stylesheet" type="text/css" href="http://cdn-na.infragistics.com/igniteui/2014.1/latest/css/structure/infragistics.css">
   <!-- test -->
   <link href="/static/bootstrap3/css/test.css" rel="stylesheet" type="text/css"/>
 
@@ -70,7 +70,7 @@
   console.log("stripe---------------------------------------------------------->")
   // ...
 </script>
- 
+
    <!-- end the stripe code -->
 
 
@@ -441,12 +441,12 @@
 
   <script type="text/javascript">
 
-   // var ROOT = '/_ah/api';
-   
-   var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+    var ROOT = '/_ah/api';
+
+   //var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
-   
+
 
 
     var apisToLoad;
@@ -500,7 +500,7 @@
   <script src="https://apis.google.com/js/client.js?onload=loadGapi">
   </script>
    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-  
+
   <!-- Keen IO support -->
   <script type="text/javascript">
     !function(a,b){if(void 0===b[a]){b["_"+a]={},b[a]=function(c){b["_"+a].clients=b["_"+a].clients||{},b["_"+a].clients[c.projectId]=this,this._config=c},b[a].ready=function(c){b["_"+a].ready=b["_"+a].ready||[],b["_"+a].ready.push(c)};for(var c=["addEvent","setGlobalProperties","trackExternalLink","on"],d=0;d<c.length;d++){var e=c[d],f=function(a){return function(){return this["_"+a]=this["_"+a]||[],this["_"+a].push(arguments),this}};b[a].prototype[e]=f(e)}var g=document.createElement("script");g.type="text/javascript",g.async=!0,g.src="https://d26b395fwzu5fz.cloudfront.net/3.0.4/keen.min.js";var h=document.getElementsByTagName("script")[0];h.parentNode.insertBefore(g,h)}}("Keen",this);
@@ -599,19 +599,19 @@
   <script src="/static/app/scripts/controllers/taskcontrollers.js"></script>
   <script src="/static/app/scripts/controllers/eventcontrollers.js"></script>
   <script src="/static/app/scripts/controllers/dashboardController.js" ></script>
-  
+
   <!--Admin controllers-->
   <script src="/static/app/scripts/controllers/usercontrollers.js" ></script>
   <script src="/static/app/scripts/controllers/groupcontrollers.js" ></script>
   <script src="/static/app/scripts/controllers/settingscontrollers.js" ></script>
   <script src="/static/app/scripts/controllers/importcontrollers.js" ></script>
-  
-  
+
+
   <!-- /End of ioGrow controllers -->
 
- 
 
-   
+
+
   <!--[if lt IE 9]>
   <script src="/static/plugins/excanvas.min.js"></script>
   <script src="/static/plugins/respond.min.js"></script>
@@ -619,7 +619,7 @@
 
 <script src="http://maps.google.com/maps/api/js?key=AIzaSyDHuaxvm9WSs0nu-FrZhZcmaKzhvLiSczY&sensor=true" type="text/javascript"></script>
 <script type="text/javascript">
-  
+
 </script>
 
 <script src="https://checkout.stripe.com/checkout.js"></script>
