--- a/templates/cases/case_show.html
+++ b/templates/cases/case_show.html
@@ -406,6 +406,14 @@
                                             <div class="form-group">
                                             <textarea id="some-textarea" placeholder="{{ _('Enter text ...')}}" id="noteBody" class="form-control ng-pristine ng-valid" rows="7" ng-model="email.body"></textarea>
                                              </div>
+                                             <div class="form-group">
+                                                        <a href="#" data-toggle="modal" ng-click="showAttachFilesPicker()"><i class="fa fa-file"></i> {{_('Attach files')}}</a>
+                                                        <ul class="list-unstyled">
+                                                            <li ng-repeat="file in sendWithAttachments">
+                                                                <%= file.title %>
+                                                            </li>
+                                                        </ul>
+                                                    </div>
                                          <div class="pull-right">
 
                                             <input ng-disabled="isLoading" ng-click="sendEmail(email)" type="submit" class="btn green" value="{{ _('Send')}}">
