update upload icon
Former-commit-id: 3a7e18f011b8e9d91b2979c74a20573b2ef64a6a [formerly 15baf1fbb9f05becd111c247ccc8b41fd10d5029] [formerly a691baa3c3bcaad8368a9908b9d73b97ec178edb [formerly 0205bf5d69559603829adc8be6519b552ab40e95]]
Former-commit-id: 887665fd873049ef329e3869b975716c6dd6df32 [formerly 34ca46956d96547e4db5e404422c91a3a96537c7]
Former-commit-id: 2b0bd551ea5bd09ae3de6f81f91ab2c45fb559a6

--- a/templates/cases/case_show.html
+++ b/templates/cases/case_show.html
@@ -336,7 +336,7 @@
                                       </div>
                                       <div class="btn-group">
                                           <button ng-click="createPickerUploader()" id="sample_editable_1_new" class="btn red">
-                                          <i class="icon-upload-alt"></i>
+                                          <i class="fa fa-upload"></i>
                                           </button>
 
                                       </div>
