--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -103,7 +103,7 @@
           </a>
             <div class="btn-group newBtn">
           <button  ng-click="showImportModal()" id="sample_editable_1_new" class="btn red">
-            <i class="icon-upload-alt"></i>
+            <i class="fa fa-upload"></i>
           </button>
         </div>
          </div>
