--- a/templates/discovers/discover_show.html
+++ b/templates/discovers/discover_show.html
@@ -1019,7 +1019,7 @@
                                 </div>
                                 <div class="btn-group">
                                     <button ng-click="createPickerUploader()" id="sample_editable_1_new" class="btn red">
-                                    <i class="icon-upload-alt"></i>
+                                    <i class="fa fa-upload"></i>
                                     </button>
 
                                 </div>
