reports is done with direct query on db
Former-commit-id: 6ef9696d77b06bdb71b8e6af10dca1dd869be2d4 [formerly 36bd0726b6249f9823773869e6148c7652306a8f] [formerly 3f429619783ed179d9a7bdae8683ee07fa768365 [formerly 07cc4c6f3f00646373a1a7acb9ebb28b3b27a4d9]]
Former-commit-id: e70b6bd630621a29a0a88767a7f8a235efb27859 [formerly 836ce5c046468bcdf3cba408be8b49fd475168d6]
Former-commit-id: 7aecdf68dfd4d8dfb932df37132f2994949f1cca

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -47,48 +47,55 @@
         </div>
 </div>
 <div ng-show="isSignedIn">
-  <div class="row waterfall">
-   <div class="dashElement cardDisp" data-span="3">
-	  	<div class="btn-group inCardOptionsBtn">
-	            <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown">
-	             <i class="fa fa-ellipsis-vertical"></i>
-	            </button>
-	            <ul class="dropdown-menu drp-dwn-right " role="menu">
-	              <li>
-	               <a href="" ng-click="showImg(chartObject.imgUrl)">
-	                   <i class="fa fa-print"></i>Print</a>
-	              </li>
-	            </ul>
-	    </div>
-	  	<div class="portlet">
-	  		<div class="portlet-title" style="margin-bottom:0px">
-	  			<div class="caption">
-	  				Forecastable Pipeline per owner 
-	  			</div>
-	  		</div>
-	  		<div class="portlet-body" id="scrollable-chart">
-	  			<div google-chart chart="chartObject" style="<%=chartObject.cssStyle%>"/></div>
-	  		</div>
-	  	</div>
-  </div>
-    <div class="dashElement">
-		<div class="dashboard-stat green">
-			<div class="visual">
-				<i class="fa fa-bar-chart-o"></i>
-			</div>
-			<div class="details">
-				<div class="number">
-					 1.5M$
+  <div class="waterfall" ng-show="!isLoading">
+    
+	   <div class="dashElement cardDisp" data-span="3">
+		  	<div class="btn-group inCardOptionsBtn">
+		            <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown">
+		             <i class="fa fa-ellipsis-vertical"></i>
+		            </button>
+		            <ul class="dropdown-menu drp-dwn-right " role="menu">
+		              <li>
+		               <a href="" ng-click="showImg(chartObject.imgUrl)">
+		                   <i class="fa fa-print"></i>Print</a>
+		              </li>
+		            </ul>
+		    </div>
+		  	<div class="portlet">
+		  		<div class="portlet-title" style="margin-bottom:0px">
+		  			<div class="caption">
+		  				Forecastable Pipeline per owner 
+		  			</div>
+		  		</div>
+		  		<div class="portlet-body" id="scrollable-chart">
+		  		
+		  			<div google-chart chart="chartOppoByOwner" style="<%=chartOppoByOwner.cssStyle%>"/></div>
+		  		</div>
+		  	</div>
+	  </div>
+	
+
+	   <div class="dashElement">
+			<div class="dashboard-stat green">
+				<div class="visual">
+					<i class="fa fa-bar-chart-o"></i>
 				</div>
-				<div class="desc">
-					Forecastable Pipeline
+				<div class="details">
+					<div class="number">
+						 <%=total_amount|currency%> 
+					</div>
+					<div class="desc">
+						Forecastable Pipeline
+					</div>
 				</div>
+				<a class="more" href="#/leads/">
+				View more <i class="m-icon-swapright m-icon-white"></i>
+				</a>
 			</div>
-			<a class="more" href="#/leads/">
-			View more <i class="m-icon-swapright m-icon-white"></i>
-			</a>
-		</div>
-   </div>
+	   </div>
+	
+
+
    <div class="dashElement cardDisp">
 	  	<div class="btn-group inCardOptionsBtn">
 	            <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown">
@@ -119,7 +126,7 @@
 			</div>
 			<div class="details">
 				<div class="number">
-					 1349
+					 <%=total_lead%>
 				</div>
 				<div class="desc">
 					 Leads
@@ -172,7 +179,7 @@
 	  			</div>
 	  		</div>
 	  		<div class="portlet-body" id="scrollable-chart2">
-	  			<div google-chart chart="leadByOwnerChart" style="<%=leadByOwnerChart.cssStyle%>"/></div>
+	  			<div google-chart chart="chartForLeadsOwner" style="<%=chartForLeadsOwner.cssStyle%>"/></div>
 	  		</div>
 	  	</div>
   </div> 
@@ -198,7 +205,7 @@
 	  			<div id="chartNormal2"></div>
 	  		</div>
 	  	</div>
-  </div> 
+  </div>  
  
 
   <!--<div class="col-md-3 dashElement">
@@ -236,26 +243,26 @@
 	];
 
     //  Create a basic funnel chart
-    $("#chartNormal").igFunnelChart({
-        width: "100%",  //"325px",
-        height: "200px",
-        dataSource: data,
-        valueMemberPath: "anmount",
-        innerLabelMemberPath: "amount",
-        innerLabelVisibility: "visible",
-        outerLabelMemberPath: "status",
-        outerLabelVisibility: "visible"
-    });
-    $("#chartNormal2").igFunnelChart({
-        width: "100%",  //"325px",
-        height: "200px",
-        dataSource: dataLeads,
-        valueMemberPath: "leads",
-        innerLabelMemberPath: "leads",
-        innerLabelVisibility: "visible",
-        outerLabelMemberPath: "status",
-        outerLabelVisibility: "visible"
-    });
+    // $("#chartNormal").igFunnelChart({
+    //     width: "100%",  //"325px",
+    //     height: "200px",
+    //     dataSource: data,
+    //     valueMemberPath: "anmount",
+    //     innerLabelMemberPath: "amount",
+    //     innerLabelVisibility: "visible",
+    //     outerLabelMemberPath: "status",
+    //     outerLabelVisibility: "visible"
+    // });
+    // $("#chartNormal2").igFunnelChart({
+    //     width: "100%",  //"325px",
+    //     height: "200px",
+    //     dataSource: dataLeads,
+    //     valueMemberPath: "leads",
+    //     innerLabelMemberPath: "leads",
+    //     innerLabelVisibility: "visible",
+    //     outerLabelMemberPath: "status",
+    //     outerLabelVisibility: "visible"
+    // });
     $('.waterfall').waterfall({
         colMinWidth: 280,
         defaultContainerWidth: 1120,
