fix #1159a bug Edge.delete_all_cascade was not working
Former-commit-id: 2e67e5b409fc7a93bad6b023acf35f28c0c310db [formerly 4ac0b7f6686f1d73cb3e5f35631bb9fbb592d47e] [formerly e7b5a466e4e031a93390ec114994ea82368019a3 [formerly 472f6c6a560bae26506510e6077f24931a246c13]]
Former-commit-id: b0c6ec99d8d4fded97dafc31efa8434ad88ca3dd [formerly 18bead293591153ea3f91698691f3641b5176796]
Former-commit-id: 91133da9eeef29c07d8d41dd2164fc90de7ebdef

--- a/templates/base.html
+++ b/templates/base.html
@@ -441,10 +441,10 @@
   <script type="text/javascript">
 
 
-   // var ROOT = '/_ah/api';
+   var ROOT = '/_ah/api';
  
    
-   var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+   // var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
